1. 完成了网易新闻的获取与显示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".activity.ZhihuDetailActivity"
             android:theme="@style/AppTheme"/>
+        <activity android:name=".activity.NewsDetailActivity"
+            android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
