--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,11 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.materialdesign.myapplication"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,26 +28,30 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:support-v4:25.2.0'
-    compile 'com.android.support:design:25.2.0'
+
     testCompile 'junit:junit:4.12'
+    // material design
+    compile 'com.android.support:design:25.2.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.android.support:cardview-v7:25.2.0'
-    /*retrofit*/
+    // glide框架
+    compile 'com.github.bumptech.glide:glide:3.6.0'
+    // retrofit
     compile 'com.squareup.retrofit2:retrofit:+'
     compile 'com.squareup.retrofit2:converter-gson:+'
     compile 'com.squareup.retrofit2:adapter-rxjava:+'
     compile 'com.google.code.gson:gson:+'
-    /*rx-android-java*/
+    // rx-android-java
     compile 'io.reactivex:rxjava:+'
     compile 'com.squareup.retrofit:adapter-rxjava:+'
     compile 'com.trello:rxlifecycle:+'
     compile 'com.trello:rxlifecycle-components:+'
 
     compile 'com.google.code.gson:gson:2.2.4'
-    //butterknife
+    // butterknife
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
     compile 'com.jakewharton:butterknife:5.1.1'
@@ -58,4 +63,8 @@ dependencies {
     //  富文本
     compile 'com.github.iwgang:simplifyspan:1.1'
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
+
+    // Google服务
+    compile 'com.google.android.gms:play-services:11.0.1'
+    compile 'com.google.android.gms:play-services-maps:11.0.1'
 }
