1. 通过contentprovider 实现了数据的持久化 2. 新增"浏览历史"页面，用于显示浏览过的新闻 3. 用loader加载页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:theme="@style/AppTheme"/>
         <activity android:name=".activity.SimpleFragmentModeActivity"
             android:theme="@style/AppTheme"/>
+        <activity android:name=".activity.ZhihuHistoryDetailActivity"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".activity.NewsHistoryDetailActivity"
+            android:theme="@style/AppTheme"/>
 
         <!--桌面widget-->
         <receiver android:name=".widget.NewsWidgetProvider">
@@ -48,6 +52,9 @@
                 android:resource="@xml/widget_info" />
         </receiver>
         <service android:name=".widget.UpdateWidgetService"/>
+        <provider
+            android:authorities="com.materialdesign.myapplication"
+            android:name=".data.NewsContentProvider"/>
     </application>
 
 
